1.0.5 update
client bumped to Java 21, gradle 8.10, fabric loom 1.8-SNAPSHOT